--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
+main.Accio#Job {
+width: 150px;
+height: 150px;
+background-color: black;
+}
+
+p.hello-accio-job {
+color: white;
+margin-left: 32px;
+padding: 10px;
+}
 
 /* Your CSS Code here. */
